Mejorar diseño visual de secciones Experiencia y Estudios - Timeline rediseñado con mejor espaciado y efectos visuales - Añadidos badges de estado (Actualidad, En curso, Completado) - Meta información con iconos (fecha, empresa/institución, ubicación) - Tags de tecnologías y habilidades en cada item - Efectos hover mejorados en tarjetas e iconos - Línea del timeline con gradiente naranja y sombra - Iconos más grandes y con mejor contraste - Diseño responsive mejorado para móviles - Estética clean y aesthetic manteniendo coherencia con el sitio

--- a/index.html
+++ b/index.html
@@ -134,9 +134,21 @@
           <i class="fas fa-code"></i>
         </div>
         <div class="timeline-content">
-          <h3>Desarrollador de Software</h3>
-          <span class="fecha">Octubre 2025 – Actualidad · Empresa d'Inserció Solucions Socials Sostenibles · Barcelona</span>
+          <div class="timeline-header">
+            <h3>Desarrollador de Software</h3>
+            <span class="timeline-badge">Actualidad</span>
+          </div>
+          <div class="timeline-meta">
+            <span class="fecha"><i class="fa-solid fa-calendar" aria-hidden="true"></i>Octubre 2025 – Actualidad</span>
+            <span class="empresa"><i class="fa-solid fa-building" aria-hidden="true"></i>Empresa d'Inserció Solucions Socials Sostenibles</span>
+            <span class="ubicacion"><i class="fa-solid fa-location-dot" aria-hidden="true"></i>Barcelona</span>
+          </div>
           <p>Programador de JavaScript y PHP, colaborando en el desarrollo del ERP corporativo y en el mantenimiento de las aplicaciones internas de la compañía.</p>
+          <div class="timeline-tags">
+            <span class="tag">JavaScript</span>
+            <span class="tag">PHP</span>
+            <span class="tag">ERP</span>
+          </div>
         </div>
       </div>
       <div class="timeline-item">
@@ -144,9 +156,19 @@
           <i class="fas fa-chalkboard-teacher"></i>
         </div>
         <div class="timeline-content">
-          <h3>Profesor de Clases Particulares</h3>
-          <span class="fecha">2022 – 2024 · Autónomo · Barcelona</span>
+          <div class="timeline-header">
+            <h3>Profesor de Clases Particulares</h3>
+          </div>
+          <div class="timeline-meta">
+            <span class="fecha"><i class="fa-solid fa-calendar" aria-hidden="true"></i>2022 – 2024</span>
+            <span class="empresa"><i class="fa-solid fa-user-tie" aria-hidden="true"></i>Autónomo</span>
+            <span class="ubicacion"><i class="fa-solid fa-location-dot" aria-hidden="true"></i>Barcelona</span>
+          </div>
           <p>Impartí sesiones personalizadas de refuerzo en materias tecnológicas y científicas, diseñando materiales adaptados a cada estudiante.</p>
+          <div class="timeline-tags">
+            <span class="tag">Enseñanza</span>
+            <span class="tag">Tecnología</span>
+          </div>
         </div>
       </div>
     </div>
@@ -161,9 +183,21 @@
           <i class="fas fa-laptop-code"></i>
         </div>
         <div class="timeline-content">
-          <h3>Ciclo Superior en Desarrollo de Aplicaciones Multiplataforma</h3>
-          <span class="fecha">2024 - Actualidad · La Salle Gràcia · Barcelona</span>
+          <div class="timeline-header">
+            <h3>Ciclo Superior en Desarrollo de Aplicaciones Multiplataforma</h3>
+            <span class="timeline-badge timeline-badge--active">En curso</span>
+          </div>
+          <div class="timeline-meta">
+            <span class="fecha"><i class="fa-solid fa-calendar" aria-hidden="true"></i>2024 - Actualidad</span>
+            <span class="empresa"><i class="fa-solid fa-school" aria-hidden="true"></i>La Salle Gràcia</span>
+            <span class="ubicacion"><i class="fa-solid fa-location-dot" aria-hidden="true"></i>Barcelona</span>
+          </div>
           <p>Formación orientada al desarrollo de aplicaciones multiplataforma, con enfoque en buenas prácticas, arquitectura de software y trabajo en equipo.</p>
+          <div class="timeline-tags">
+            <span class="tag">Desarrollo Multiplataforma</span>
+            <span class="tag">Arquitectura de Software</span>
+            <span class="tag">Buenas Prácticas</span>
+          </div>
         </div>
       </div>
       <div class="timeline-item">
@@ -171,9 +205,16 @@
           <i class="fas fa-graduation-cap"></i>
         </div>
         <div class="timeline-content">
-          <h3>Bachillerato Social</h3>
-          <span class="fecha">2021 - 2024 · La Salle Horta · Barcelona</span>
-          <p>Formación en desarrollo de aplicaciones multiplataforma, incluyendo programación, bases de datos y desarrollo web y móvil, con enfoque en buenas prácticas, arquitectura de software y trabajo en equipo.</p>
+          <div class="timeline-header">
+            <h3>Bachillerato Social</h3>
+            <span class="timeline-badge timeline-badge--completed">Completado</span>
+          </div>
+          <div class="timeline-meta">
+            <span class="fecha"><i class="fa-solid fa-calendar" aria-hidden="true"></i>2021 - 2024</span>
+            <span class="empresa"><i class="fa-solid fa-school" aria-hidden="true"></i>La Salle Horta</span>
+            <span class="ubicacion"><i class="fa-solid fa-location-dot" aria-hidden="true"></i>Barcelona</span>
+          </div>
+          <p>Formación académica en ciencias sociales con enfoque en desarrollo personal y preparación para estudios superiores.</p>
         </div>
       </div>
     </div>
